SendTimestamps: Fix chatbox having a scrollbar

--- a/src/plugins/sendTimestamps/styles.css
+++ b/src/plugins/sendTimestamps/styles.css
@@ -44,5 +44,8 @@
 
 .vc-st-button {
     margin-right: 4px;
-    transform: scale(1.1);
+}
+
+.vc-st-button svg {
+    transform: scale(1.1) translateY(1px);
 }
